# grpc-benchmarks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md
cpp/src/: client_main.cpp  server_main.cpp
go/: Dockerfile  README.md  go.mod
go/cmd/grpc_benchmark_client/: main.go
go/cmd/grpc_benchmark_server/: main.go
proto/: benchmark.proto
python/: README.md  pyproject.toml  setup.py
python/src/python_grpc_benchmark/: __init__.py  client.py  server.py
rust/: Cargo.toml  Dockerfile  README.md  build.rs
rust/src/: client.rs  lib.rs  server.rs
